Hungarian translation for Discover

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_hu.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_hu.properties
@@ -249,6 +249,7 @@ CmdList=Parancslista
 Coefficient=Együttható
 CollapseAll=Összes bezárása
 CollapseRows=Sorok összevonása
+CollinearPointsA=Kollineáris pontok: %0
 Color=Szín
 ColorfulConstructionProtocol=Színezett szerkesztés lépései
 ColumnHeader=Oszlop fejléc
@@ -266,8 +267,10 @@ Compasses.Help=Szakasz vagy két pont a sugár meghatározásához, majd a középpont
 ComplexNumber=Komplex szám
 ComplexNumber.Help=Kattintás a rajzlapon
 ComplexNumber.Tool=Komplex szám
+CongruentSegmentsA=Egybevágó szakaszok: %0
 ConciseCode=Tömörített kód
 ConciseUsingCSE5=Tömörítéshez cse5 használata
+ConcyclicPointsA=Egy körre illeszkedõ pontok: %0
 Condition.ShowObject=Az alakzat megjelenítésének feltétele
 Conditions=Feltételek
 Cone=Kúp
@@ -415,7 +418,10 @@ Dimensions=Méretek
 DirectionOfA=%0 irányvektora
 Directrix=Vezéregyenes
 DirectrixOfA=%0 vezéregyenese
+Discover=Felfedezés
+Discover.Help=Egy pont kijelölése
 Discrete=Diszkrét
+DiscoveredTheoremsOnPointA=A(z) %0 ponttal kapcsolatos felfedezések
 Display=Megjelenít
 DisplayPointSymbol=Pontok szimbólumának megjelenítése
 Distance=Távolság
@@ -676,6 +682,7 @@ Hypergeometric.population=populáció
 Hypergeometric.sample=minta
 Icon=Ikon
 Icosahedron=Ikozaéder
+IdenticalPointsA=Megegyezõ pontok: %0
 IllegalArgumentAinCustomToolB=%0 helytelen argumentum %1 eszközhöz
 Image=Kép
 Image.Help=A kép bal alsó sarkának megadása rajzlapon vagy ponton való kattintással
@@ -683,6 +690,10 @@ Image.Tool=Kép
 Images=Képek
 ImplicitPoly=Implicit görbe
 ImportDataFile=Adatfájl importálása
+Incircle=Beírt kör
+Incircle.Help=Háromszög beírt köre
+IncircleCenter=Beírt kör középpontja
+IncircleCenter.Help=Háromszög beírt körének középpontja
 IncircleOfTriangleABC=%0%1%2 háromszög beírt köre
 Increasing=Növekv\u0151
 IncreasingOnce=Növekv\u0151 (Egyszer)
@@ -1161,6 +1172,7 @@ RecoveryText=A következ\u0151 GeoGebra fájlok állíthatók helyre.
 RecoveryTitle=Helyreállítás
 Redefine=Újradefiniál
 Redo=Újra
+RedrawDifferently=Próbálja újrarajzolni az ábrát másképpen!
 Refresh=Nézet frissítése
 RegressionAnalysis=Regresszió analízis
 RegressionModel=Regressziós modell
@@ -1264,6 +1276,7 @@ SendFeedback=Visszajelzés küldése
 Sensors=Szenzorok
 Separator=Szeparátor
 SetClasssesManually=Osztályok beállítása manuálisan
+SetsOfParallelLinesA=Párhuzamos egyenesek: %0
 SetToCurrentLocation=Aktuális lap beállítása
 Settings=Beállítások
 Settings.ResetDefault=Alapbeállítások visszaállítása
@@ -1578,6 +1591,7 @@ UngroupObjectes=Alakzatok csoportjának bontása
 UnitVectorOfA=%0 egységvektora
 UnitVectorPerpendicularToA=Mer\u0151leges egységvektor %0-ra/-re
 UnsavedChangesFound=A GeoGebra nem mentett változtatásokat talált. Törölni kívánja \u0151ket vagy meg\u0151rizni?
+UnsupportedSteps=Nem támogatott lépéseket tartalmaz a szerkesztés.
 Untitled=Névtelen
 UntitledA=Címnélküli%0
 UntitledConstruction=Névtelen szerkesztés
