Spanish translation for Discover

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_es.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_es.properties
@@ -256,6 +256,7 @@ CmdList=Lista de comandos
 Coefficient=Coeficiente
 CollapseAll=Repliega todo
 CollapseRows=Combinar filas
+CollinearPointsA=Puntos colineales: %0
 ColorfulConstructionProtocol=Protocolo a color
 ColumnHeader=Encabezado de columna
 ColumnOrder=Por columnas
@@ -273,8 +274,10 @@ Compasses.Help=Segmento o puntos extremos del radio; luego, centro
 ComplexNumber=Número complejo
 ComplexNumber.Help=Selecciona posición
 ComplexNumber.Tool=Número complejo
+CongruentSegmentsA=Segmentos congruentes: %0
 ConciseCode=Código conciso
 ConciseUsingCSE5=Resumen usando cse5
+ConcyclicPointsA=Puntos concíclicos: %0
 Condition.ShowObject=Condición para mostrar el objeto
 Conditions=Condiciones
 Cone=Cono
@@ -436,7 +439,10 @@ DirectionOfA=Dirección de %0
 Directrix=Directriz
 DirectrixOfA=Directriz de %0
 Discard=Descartar
+Discover=Descubre
+Discover.Help=Selecciona punto
 Discrete=Discreta
+DiscoveredTheoremsOnPointA=Descubrió teoremas en el punto %0
 Display=Muestra
 DisplayPointSymbol=Mostrar  el símbolo para puntos
 Distance=Distancia o Longitud
@@ -730,6 +736,7 @@ Hypergeometric.population=población
 Hypergeometric.sample=muestra
 Icon=Icono
 Icosahedron=Icosaedro
+IdenticalPointsA=Puntos idénticos: %0
 IllegalArgumentAinCustomToolB=Argumento %0 ilegal en la herramienta personal %1
 Image=Imagen
 Image.Help=Selecciona imagen desde archivo o cámara
@@ -739,6 +746,10 @@ Images=Imágenes
 ImplicitPoly=Curva implícita
 ImplicitSurface=Superficie implícita
 ImportDataFile=Importa archivo de datos
+Incircle=Circunferencia inscrita
+Incircle.Help=Circunferencia inscrita en un triángulo
+IncircleCenter=Centro de la circunferencia inscrita
+IncircleCenter.Help=Centro de la circunferencia inscrita en un triángulo
 IncircleOfTriangleABC=Circunferencia inscripta en triángulo %0%1%2
 Increasing=Creciente
 IncreasingOnce=Creciente (una sola vez)
@@ -1255,6 +1266,7 @@ RecoverySave=Guardar
 RecoveryText=Pueden recuperarse los siguientes archivos de GeoGebra:
 RecoveryTitle=Fallo en la Recuperación
 Redo=Rehace
+RedrawDifferently=Intente volver a dibujar la figura de forma diferente.
 Refresh=Actualiza las Vistas (limpia rastros)
 RegressionAnalysis=Análisis de Regresión
 RegressionModel=Modelo de regresión
@@ -1373,6 +1385,7 @@ SendFeedback=Enviar devolución
 Sensors=Sensores
 Separator=Separador
 SetClasssesManually=Definición manual de clases
+SetsOfParallelLinesA=Líneas paralelas: %0
 SetToCurrentLocation=En ubicación actual
 Settings=Configuración
 Settings.ResetDefault=Cofiguración por defecto
@@ -1738,6 +1751,7 @@ UnsavedChangesFound=¿Se recuperan o se eliminan los cambios sin guardar encontra
 UnsupportedBrowser=El navegador no es compatible.
 UnsupportedBrowser.Message=Intenta con otro navegador para utilizar GeoGebra Notas.
 UnsupportedBrowser.Message.Mebis=Por favor, intenta con otro navegador para utilizar Mebis Tafel.
+UnsupportedSteps=La figura consta de pasos no compatibles.
 Untitled=Sin título
 UntitledA=SinTítulo%0
 UntitledConstruction=Construcción sin título
