Finalize Spanish/Hungarian translations for Discover

--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_es.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_es.properties
@@ -1000,6 +1000,7 @@ None=Ninguno
 NormalCurve=Curva Normal
 NormalQuantilePlot=Gráfico Q-Q Cuantil Normal
 Normalized=Normalizado
+NoTheoremsFound=No se encontraron teoremas descubiertos.
 NotAvailable=No disponible
 NotIncluded=no incluido
 NotSharedLinkHelpTxt=Privado, no compartido
