--- a/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_hu.properties
+++ b/common-jre/src/nonfree/resources/org/geogebra/common/jre/properties/menu_hu.properties
@@ -931,6 +931,7 @@ None=Nincs
 NormalCurve=Haranggörbe
 NormalQuantilePlot=Normál Kvantilis Függvény
 Normalized=Normalizált
+NoTheoremsFound=Nincs semmi figyelemreméltó.
 NotAvailable=Nem elérhet\u0151
 NotIncluded=Nem tartalmazott
 NullHypothesis=Nullhipotézis
